--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -16,8 +16,7 @@
                     <div class="col-sm-1" style="max-height: 60px ;vertical-align: center; margin-left: -15px">
                         <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-top: 7px">
                     </div>
-
-                    <div class="col-sm-5" style="max-height: 60px; margin-left: -5.5%">
+                    <div class="col-sm-5" style="max-height: 60px; margin-left: -98px">
                         <a class="head_title" style=" cursor: pointer; margin-left: 10px; margin-top: 5px;" onclick="backMain()">
                             <h1 style="max-height: 40px; min-width: 900px">
                                 С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">управление заявками</span>
