structure menu style fix

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #0e829b;
+    background-color: #577fae;
     margin-top: 0px;
     padding: 0px 0px 0px 30px;
 }
