--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -25,76 +25,80 @@
                     </div>
                 </div>
             </div>
-            <div class="row" style="width: 100%; margin-top: 0px">
-                <div class="col-sm-2" style="border-right: 3px solid #eeeeee; height: 900px; max-width: 298px; margin-left: 40px; margin-top: 0px">
-                    <div  style="height: 35px; margin-left: 15px; margin-top: 10px">
-                        <div class="row" style="margin-left: -50px">
-                            <select id="cb_tree" class="form-select custom_hov" aria-label="Default select example" style="width: 219px; height: 34px; font-size: 19px; border: none; outline: none; margin-left: 20px; margin-bottom: 5px">
-                                <option id="pg" value="pg" selected>Проектные группы</option>
-                                <tr>
-                                <option id="os" value="os">Сторонние продажи</option>
-                                </tr>
-                            </select>
-                            <button id="addPG" name="but1" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 30px; width: 30px; margin-left: 10px; background-color: #ffffff" data-toggle="modal" data-target="#modalNewPg" onclick="">
-                                <h1 style="margin-top: -8px; margin-left: -2px">+</h1>
-                            </button>
-                            <button id="addBY" name="but2" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 30px; width: 30px; margin-left: 10px; background-color: #ffffff" data-toggle="modal" data-target="#modalNewBy" onclick="" hidden>
-                                <h1 style="margin-top: -8px; margin-left: -2px">+</h1>
-                            </button>
-                        </div>
-                    </div>
-                    <div id="tbl_cont" class="row" style=" margin-top: 5px; margin-left: -40px; margin-right: -16px">
-                        <table id="table_struct" class="tree" style="width: 350px; border-top: 1px solid #eeeeee;">
-                            {% for pg  in pg_lst %}
-                                <tr id="node-{{ pg.pk }}" class="custom_hov treegrid-{{ pg.pk }}" style="height: 30px; max-height: 30px;">
-                                    <td style="max-width: 200px;width: 200px;padding-left: 25px">{{ pg.pg_name }}</td>
-                                    <td style="text-align: right;">
-                                        <button id="addCode" name="{{ pg.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#modalNewCode" style="height: 20px; width: 20px; margin-left: 9px; margin-right: 10px; background-color: white;" onclick="takePgName(name)">
-                                            <h5 style="margin-top: -9px; margin-left: -6px; color: #aaaaaa">+</h5>
-                                        </button>
-                                    </td>
-                                    <td style="text-align: right">
-                                        <button id="delPG-{{ pg.pk }}" name="{{ pg.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 20px; width: 20px; margin-left: -15px; margin-right: 42px; background-color: white" data-toggle="modal" data-target="#modalDellPg" onclick="del_pg_get_modal(name)">
-                                            <h5 style="margin-top: -9px; margin-left: -3px; color: #aaaaaa">-</h5>
-                                        </button>
-                                    </td>
-                                </tr>
-                                {% for code  in code_lst %}
-                                    {% if  code.connect_id == pg.id %}
-                                        <tr class="custom_hov treegrid-{{ pg.pk }}{{ code.id }} treegrid-parent-{{ pg.pk }}" style="width: 100px; height: 30px; max-height: 30px; margin-left: 0px">
-                                            <td style="padding-left: 40px">#{{ code.code_name }}</td>
-                                            <td style="text-align: right">
-                                                <button id="addMPZ-{{ code.pk }}" name="{{ code.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#modalNewMpz" style=" height: 20px; width: 20px; margin-left: 0px; margin-right: 10px ; background-color: white; alignment: right" onclick="takeCodeName(name)">
-                                                    <h5 style="margin-top: -9px; margin-left: -6px; color: #aaaaaa">+</h5>
-                                                </button>
-                                            </td>
-                                            <td style="text-align: right">
-                                                <button id="delCode-{{ code.pk }}" name="{{ code.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 20px; width: 20px; margin-left: -25px; margin-right: 42px ; background-color: white" data-toggle="modal" data-target="#modalDellCode" onclick="del_code_get_modal(name)">
-                                                    <h5 style="margin-top: -9px; margin-left: -3px; color: #aaaaaa">-</h5>
-                                                </button>
-                                            </td>
+            <div class="row" style="width: 100%; margin-top: 0px;">
+                <div class="" style="background-color: #edeef0; padding-left: -15px">
+                    <div class="col-sm-2" style="border-right: none; height: 900px; max-width: 248px; margin-left: 40px; margin-top: 0px;">
+                        <div  style="height: 35px; margin-left: 15px; margin-top: 10px">
+                            <div class="row" style="background-color: #edeef0; margin-left: -75px; margin-top: -10px; border-bottom: 1px solid #939393">
+                                <div class="row" style="margin-left: 25px">
+                                    <select id="cb_tree" class="form-select custom_hov" aria-label="Default select example" style="width: 214px; height: 34px; font-size: 18px; border: none; outline: none; margin-left: 20px; margin-bottom: 5px; color: #000000; background-color: #edeef0">
+                                        <option id="pg" value="pg" selected>Проектные группы</option>
+                                        <tr>
+                                        <option id="os" value="os">Сторонние продажи</option>
                                         </tr>
-                                        {% for mpz  in mpz_lst %}
-                                            {% if  mpz.connect_id == code.id %}
-                                                <tr id="{{ mpz.pk }}" class="custom_hov treegrid-parent-{{ pg.pk }}{{ code.id }}" style="height: 30px; max-height: 30px">
-                                                    <td style=" padding-left: 40px">МПЗ №{{ mpz.mpz_appl_name }}</td>
-                                                    <td style="text-align: right">
-                                                        <button id="infoMPZ-{{ mpz.pk }}" name="{{ mpz.pk }}" value="" type="button" class="btn btn-light btn-sm" style="height: 20px; width: 20px; margin-left: 0px;margin-right: 10px; background-color: white" onclick="get_mpz_data(name, {{ pg.pk }})">
-                                                            <h5 style="margin-top: -8px; margin-left: -2px; color: #aaaaaa">i</h5>
-                                                        </button>
-                                                    </td>
-                                                    <td style="text-align: right">
-                                                        <button id="dellMPZ-{{ mpz.pk }}" name="{{ mpz.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 20px; width: 20px; margin-left: -25px; margin-right: 42px; background-color: white" data-toggle="modal" data-target="#modalDellMpz" onclick="del_mpz_get_modal(name)">
-                                                            <h5 style="margin-top: -9px; margin-left: -3px; color: #aaaaaa">-</h5>
-                                                        </button>
-                                                    </td>
-                                                </tr>
-                                            {% endif %}
-                                        {% endfor %}
-                                    {% endif %}
+                                    </select>
+                                    <button id="addPG" name="but1" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 24px; width: 24px; margin-left: 2px;margin-top: 7px ; background-color: #edeef0; outline: #edeef0; border: none" data-toggle="modal" data-target="#modalNewPg" onclick="">
+                                        <h1 style="margin-top: -10px; margin-left: -4px; color: #000000">+</h1>
+                                    </button>
+                                    <button id="addBY" name="but2" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 24px; width: 24px; margin-left: 2px;margin-top: 7px ; background-color: #394350" data-toggle="modal" data-target="#modalNewBy" onclick="" hidden>
+                                        <h1 style="margin-top: -10px; margin-left: -4px; color: black">+</h1>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="tbl_cont" class="row" style=" margin-top: 5px; margin-left: -40px; margin-right: -15px;">
+                            <table id="table_struct" class="tree" style="width: 350px; ">
+                                {% for pg  in pg_lst %}
+                                    <tr id="node-{{ pg.pk }}" class="custom_hov treegrid-{{ pg.pk }}" style="height: 25px; max-height: 25px; color: #000000;">
+                                        <td style="max-width: 200px;width: 200px;padding-left: 25px">{{ pg.pg_name }}</td>
+                                        <td style="text-align: right;">
+                                            <button id="addCode" name="{{ pg.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#modalNewCode" style="height: 20px; width: 20px; margin-left: 19px; margin-right: 19px; background-color: #edeef0; border: none" onclick="takePgName(name)">
+                                                <h5 style="margin-top: -8px; margin-left: -5px; color: #4f565c; font-weight: normal">+</h5>
+                                            </button>
+                                        </td>
+                                        <td style="text-align: right">
+                                            <button id="delPG-{{ pg.pk }}" name="{{ pg.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 20px; width: 20px; margin-left: -15px; margin-right: 10px; background-color: #edeef0; border: none" data-toggle="modal" data-target="#modalDellPg" onclick="del_pg_get_modal(name)">
+                                                <h5 style="margin-top: -8px; margin-left: -2px; color: #4f565c; font-weight: normal">-</h5>
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    {% for code  in code_lst %}
+                                        {% if  code.connect_id == pg.id %}
+                                            <tr class="custom_hov treegrid-{{ pg.pk }}{{ code.id }} treegrid-parent-{{ pg.pk }}" style="width: 100px; height: 25px; max-height: 25px; margin-left: 0px; color: #000000">
+                                                <td style="padding-left: 30px">#{{ code.code_name }}</td>
+                                                <td style="text-align: right">
+                                                    <button id="addMPZ-{{ code.pk }}" name="{{ code.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#modalNewMpz" style=" height: 20px; width: 20px; margin-left: 19px; margin-right: 19px ; background-color: #edeef0; alignment: right; border: none" onclick="takeCodeName(name)">
+                                                        <h5 style="margin-top: -8px; margin-left: -5px; color: #112945; font-weight: normal">+</h5>
+                                                    </button>
+                                                </td>
+                                                <td style="text-align: right">
+                                                    <button id="delCode-{{ code.pk }}" name="{{ code.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 20px; width: 20px; margin-left: -15px; margin-right: 10px ; background-color: #edeef0; border: none" data-toggle="modal" data-target="#modalDellCode" onclick="del_code_get_modal(name)">
+                                                        <h5 style="margin-top: -8px; margin-left: -2px; color: #112945; font-weight: normal">-</h5>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            {% for mpz  in mpz_lst %}
+                                                {% if  mpz.connect_id == code.id %}
+                                                    <tr id="{{ mpz.pk }}" class="custom_hov treegrid-parent-{{ pg.pk }}{{ code.id }}" style="height: 25px; max-height: 25px; color: #000000">
+                                                        <td style=" padding-left: 35px; ">МПЗ №{{ mpz.mpz_appl_name }}</td>
+                                                        <td style="text-align: right">
+                                                            <button id="infoMPZ-{{ mpz.pk }}" name="{{ mpz.pk }}" value="" type="button" class="btn btn-light btn-sm" style="height: 20px; width: 20px; margin-left: 19px;margin-right: 19px; background-color: #edeef0; border: none" onclick="get_mpz_data(name, {{ pg.pk }})">
+                                                                <h5 style="margin-top: -7px; margin-left: -1px; color: #112945; font-weight: normal">i</h5>
+                                                            </button>
+                                                        </td>
+                                                        <td style="text-align: right">
+                                                            <button id="dellMPZ-{{ mpz.pk }}" name="{{ mpz.pk }}" value="val_6" type="button" class="btn btn-light btn-sm" style="height: 20px; width: 20px; margin-left: -15px; margin-right: 10px; background-color: #edeef0; border: none" data-toggle="modal" data-target="#modalDellMpz" onclick="del_mpz_get_modal(name)">
+                                                                <h5 style="margin-top: -8px; margin-left: -2px; color: #112945; font-weight: normal">-</h5>
+                                                            </button>
+                                                        </td>
+                                                    </tr>
+                                                {% endif %}
+                                            {% endfor %}
+                                        {% endif %}
+                                    {% endfor %}
                                 {% endfor %}
-                            {% endfor %}
-                        </table>
+                            </table>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-4" style="margin-left: 15px; margin-top: 40px">
