--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -94,7 +94,7 @@ img {
 
 .custom_hov {
 
-  background-color: #edeef0;
+  background-color: #e3e7ef;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
 }
