--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -9,12 +9,12 @@
             <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <div class="background-container">
+        <div class="background-container" style="height: 961px">
             <div id="picoutput"></div>
             <div class="page-header">
                 <div class="row" style="max-height: 60px; margin-left: 0px; margin-right: 0px">
                     <div class="col-sm-1" style="max-height: 60px ;vertical-align: center; margin-left: -15px">
-                        <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-top: 7px">
+                        <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 30px; margin-top: 10px">
                     </div>
                     <div class="col-sm-5" style="max-height: 60px; margin-left: -98px">
                         <a class="head_title" style=" cursor: pointer; margin-left: 10px; margin-top: 5px;" onclick="backMain()">
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" style="width: 100%; margin-top: 0px; background-color: #f4f7fe; margin-left: 0px">
+            <div class="row" style="width: 100%; margin-top: 0px; background-color: #f4f7fe; margin-left: 0px; height: 917px">
                 <div class="" style="background-color: #e3e7ef; padding-left: -15px; margin-left: -15px">
                     <div class="col-sm-2" style="border-right: none; max-width: 248px; margin-left: 40px; margin-top: 0px;">
                         <div  style="height: 35px; margin-left: 15px; margin-top: 10px">
