structure buy tree selected color fix"

--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -1216,7 +1216,7 @@
                         this.style.backgroundColor = defaultStatus;
                         this.classList.add("custom_hov");
                 }),
-                document.getElementById(name).style.backgroundColor = '#eeeeee',
+                document.getElementById(name).style.backgroundColor = '#95b1d0',
                 $.ajax({
                     type: "GET",
                     url: "/structure/",
